using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class GameString : MonoBehaviour
{
    public static string Vertical = "Vertical";
    public static string Horizontal = "Horizontal";

    public static string InDancingAnimation = "InDancingAnimation";
    public static string OutDancingAnimation = "OutDancingAnimation";





    public static string Zone = "Zone";
    public static string InRoom = "InRoom";
    public static string OutRoom = "OutRoom";


    public static string MainScene = "MainScene";
    public static string RoomScene = "RoomScene";


    public static string Access = "Access";





}
